[package]
name = "ouroboros-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tiny_http = "0.12.0"
rand = "0.8"

[[bin]]
name = "auth-server"
path = "src/bin/server.rs"
